--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ BROWSER=chrome
 # Options:
 #  windows
 #  linux
-CURRENT_OS=windows
+CURRENT_OS=linux
 
 # Streamers channels names list separate by comma, e.g: shroud,ninja,tfue
 STREAMERS=doomfist_rng,antedeguemonn,artilh3iro,lucaspagun
