--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,4 @@
-# Open twitch.tv on your favorite browser, remember that your account must be logged in on the browser
-BROWSER=
+STREAMERS=streamer1,streamer2,streamer3
 
-#Current operation system that the script will run, select below your operational system
-# Options:
-#  windows
-#  linux
-CURRENT_OS=
-
-# Streamers channels names list separate by comma, e.g: shroud,ninja,tfue
-STREAMERS=
-
-# Client-secret encounter in your twitch.tv developer app information
-CLIENT_SECRET=
-
-# Client-id encounter in your twitch.tv developer app information
-CLIENT_ID=
+TWITCH_USERNAME=your_twitch_username
+TWITCH_PASSWORD=your_twitch_password
