--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node -r dotenv/config index.js"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.6.0",
+    "puppeteer": "^24.4.0"
   }
 }
